force-app/main/default/objects/Shared_Solar_System__c/Shared_Solar_System__c.object-meta.xml
<CustomObject>
    <articleTypeChannelDisplay n1:nil="true"/>
    <customSettingsType n1:nil="true"/>
    <description n1:nil="true"/>
    <eventType n1:nil="true"/>
    <gender n1:nil="true"/>
    <household>false</household>
    <label>Shared Solar System</label>
    <nameField>
        
        <label>Shared Solar System Name</label>
        
        
        
        <type>Text</type>
        
    </nameField>
    <pluralLabel>Shared Solar Systems</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <startsWith n1:nil="true"/>
</CustomObject>