force-app/main/default/objects/Shared_Solar_System__c/fields/Actual_COD_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_COD_Date__c</fullName>
    <label>Actual COD Date</label>
    <type>Date</type>
</CustomField>