force-app/main/default/objects/Shared_Solar_System__c/fields/Actual_Credits_Flowing_Date__c.field-meta.xml
<CustomField>
    <fullName>Actual_Credits_Flowing_Date__c</fullName>
    <label>Actual First Credit Transfer to Customer</label>
    <type>Date</type>
</CustomField>