force-app/main/default/objects/Shared_Solar_System__c/fields/Actual_Mechanical_Completion_Override__c.field-meta.xml
<CustomField>
    <fullName>Actual_Mechanical_Completion_Override__c</fullName>
    <description>Fill in with the date the project reached mechanical completion.</description>
    <inlineHelpText>Fill in with the date the project reached mechanical completion.</inlineHelpText>
    <label>Actual Mechanical Completion</label>
    <type>Date</type>
</CustomField>