force-app/main/default/objects/Shared_Solar_System__c/fields/Actual_PTO_Date_MANUAL__c.field-meta.xml
<CustomField>
    <fullName>Actual_PTO_Date_MANUAL__c</fullName>
    <description>Date the project reached PTO.</description>
    <inlineHelpText>Date the project reached PTO.</inlineHelpText>
    <label>Actual PTO Date</label>
    <type>Date</type>
</CustomField>