force-app/main/default/objects/Shared_Solar_System__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Number and Street Name</inlineHelpText>
    <label>Address</label>
    <length>30</length>
    <type>Text</type>
</CustomField>