force-app/main/default/objects/Shared_Solar_System__c/fields/Anchor_Capacity_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Anchor_Capacity_Reserved__c</fullName>
    <inlineHelpText>Sum of all Perch acquired Anchor Subscriptions, automatically calculated</inlineHelpText>
    <label>Perch Acq Committed Anchor Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>