force-app/main/default/objects/Shared_Solar_System__c/fields/Anchor_CS_Capacity_Committed__c.field-meta.xml
<CustomField>
    <fullName>Anchor_CS_Capacity_Committed__c</fullName>
    <formula>Capacity_Committed_kW_DC__c +  Anchor_Capacity_Reserved__c + Client_Acq_Committed_Anchor_Capacity__c + Client_Acq_Committed_Small_CS_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sum of all Perch and Client acquired subscriptions (Anchor and Small CS)</inlineHelpText>
    <label>Total Committed Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>