force-app/main/default/objects/Shared_Solar_System__c/fields/Anniversary_Date__c.field-meta.xml
<CustomField>
    <fullName>Anniversary_Date__c</fullName>
    <description>The 12-month anniversary after PTO</description>
    <inlineHelpText>The 12-month anniversary after PTO</inlineHelpText>
    <label>Anniversary Date</label>
    <type>Date</type>
</CustomField>