force-app/main/default/objects/Shared_Solar_System__c/fields/Apex_Context__c.field-meta.xml
<CustomField>
    <fullName>Apex_Context__c</fullName>
    <defaultValue>false</defaultValue>
    <description>No profiles or permission sets should grant users edit access to this field. It is used to make sure record updates made in Apex aren&apos;t prevented by validation rules.</description>
    <label>Apex Context</label>
    <type>Checkbox</type>
</CustomField>