force-app/main/default/objects/Shared_Solar_System__c/fields/App_ID_WO_Manual__c.field-meta.xml
<CustomField>
    <fullName>App_ID_WO_Manual__c</fullName>
    <label>App ID#/ WO #</label>
    <length>20</length>
    <type>Text</type>
</CustomField>