force-app/main/default/objects/Shared_Solar_System__c/fields/Assemblage__c.field-meta.xml
<CustomField>
    <fullName>Assemblage__c</fullName>
    <formula>RIGHT(Name,4)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Assemblage</label>
    <type>Text</type>
</CustomField>