force-app/main/default/objects/Shared_Solar_System__c/fields/Assemblage_Count__c.field-meta.xml
<CustomField>
    <fullName>Assemblage_Count__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Assemblage Count</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>