force-app/main/default/objects/Shared_Solar_System__c/fields/Auto_Payment_Form__c.field-meta.xml
<CustomField>
    <fullName>Auto_Payment_Form__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field determines whether or not the customer&apos;s portal will show the Chargent connected payment button/form or if it will show the form that simply collects payment information up front. True is the latter, false is the former.</description>
    <inlineHelpText>This field determines whether or not the customer&apos;s portal will show the Chargent connected payment button/form or if it will show the form that simply collects payment information up front. True is the latter, false is the former.</inlineHelpText>
    <label>Auto-Payment Form</label>
    <type>Checkbox</type>
</CustomField>