force-app/main/default/objects/Shared_Solar_System__c/fields/Available_Anchor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Anchor_Capacity__c</fullName>
    <formula>Reserved_Anchor_Capacity__c - Anchor_Capacity_Reserved__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Perch acquired Anchor Capacity not yet committed; Result of Reserved Anchor Capacity - Committed Anchor Capacity</inlineHelpText>
    <label>Perch Acq Available Anchor Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>