force-app/main/default/objects/Shared_Solar_System__c/fields/Available_Demand_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Available_Demand_Capacity__c</fullName>
    <description>W-023397</description>
    <formula>Reserved_Demand_Capacity__c - Committed_Demand_Capacity__c - Pending_Demand_Capacity__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Demand Capacity not yet committed; Result of Reserved Demand Capacity - Committed Demand Capacity - Pending Demand Capacity</inlineHelpText>
    <label>Available Demand Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>