force-app/main/default/objects/Shared_Solar_System__c/fields/Available_SMB_Underwriting_Method_Docs__c.field-meta.xml
<CustomField>
    <fullName>Available_SMB_Underwriting_Method_Docs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available SMB Underwriting Method: Docs</label>
    <type>Checkbox</type>
</CustomField>