force-app/main/default/objects/Shared_Solar_System__c/fields/Available_SMB_Underwriting_Method_FICO__c.field-meta.xml
<CustomField>
    <fullName>Available_SMB_Underwriting_Method_FICO__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Used by the QualificationService for both SMB and Resi customers</inlineHelpText>
    <label>Available Underwriting Method: FICO</label>
    <type>Checkbox</type>
</CustomField>