force-app/main/default/objects/Shared_Solar_System__c/fields/Billing_Anchors__c.field-meta.xml
<CustomField>
    <fullName>Billing_Anchors__c</fullName>
    <label>Billing Anchors on Project</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>BlueWave</fullName>
                
                
                    <label>BlueWave</label>
                
                </value>
            
                <value>
                
                    <fullName>RadianGen</fullName>
                
                
                    <label>RadianGen</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>