force-app/main/default/objects/Shared_Solar_System__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>NMC</fullName>
                
                
                    <label>NMC</label>
                
                </value>
            
                <value>
                
                    <fullName>kWh</fullName>
                
                
                    <label>kWh</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>