force-app/main/default/objects/Shared_Solar_System__c/fields/BWC_Project_Entity_Manual__c.field-meta.xml
<CustomField>
    <fullName>BWC_Project_Entity_Manual__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Entity name of project.</inlineHelpText>
    <label>Project Entity</label>
    <referenceTo>Entity__c</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>