force-app/main/default/objects/Shared_Solar_System__c/fields/Capacity_Available_to_be_Reserved__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Available_to_be_Reserved__c</fullName>
    <formula>Perch_Acq_Reserved_Small_CS_Capacity__c - (Pending_Small_CS_Capacity__c + Capacity_Committed_kW_DC__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Perch acquired Small CS Capacity not yet committed or pending; Result of Reserved Small CS Capacity - (Committed and Pending Small CS Capacity)</inlineHelpText>
    <label>Perch Acq Available Small CS Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>