force-app/main/default/objects/Shared_Solar_System__c/fields/Capacity_Committed_kW_DC__c.field-meta.xml
<CustomField>
    <fullName>Capacity_Committed_kW_DC__c</fullName>
    <inlineHelpText>Sum of Perch acquired Complete Small CS Subscriptions, automatically calculated</inlineHelpText>
    <label>Perch Acq Committed Small CS Capacity</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>