force-app/main/default/objects/Shared_Solar_System__c/fields/CDG_Host_Account__c.field-meta.xml
<CustomField>
    <fullName>CDG_Host_Account__c</fullName>
    <description>This is the Community Distributed Generation Host Account name that is used for NY Allocation Schedules. It is only needed for NY Shared Solar Systems.</description>
    <inlineHelpText>This is the Community Distributed Generation Host Account name that is used for NY Allocation Schedules. It is only needed for NY Shared Solar Systems</inlineHelpText>
    <label>CDG Host Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>