force-app/main/default/objects/Shared_Solar_System__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <formula>IF ( OR( 

Name = &quot;Oxford Barrett St. P2&quot;, Name = &quot;Oxford Barrett St. P1&quot;), &quot;Class 2&quot;,

IF(AND(   Total_System_Size_kW_AC__c &gt; 60, Total_System_Size_kW_AC__c &lt;= 1000), &quot;Class 2&quot;, 

IF ( Total_System_Size_kW_AC__c &gt; 1000, &quot;Class 3&quot;, null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Class</label>
    <type>Text</type>
</CustomField>