force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The client account field designates that party in which this shared solar system is being serviced for.</description>
    <inlineHelpText>The client account field designates that party in which this shared solar system is being serviced for.</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>