force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Available_Anchor_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Available_Anchor_Capacity__c</fullName>
    <formula>Client_Acq_Reserved_Anchor_Capacity__c - (Client_Acq_Committed_Anchor_Capacity__c + Client_Acq_Pending_Anchor_Capacity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Client Acquired Anchor Capacity not yet committed or pending; Result of Reserved Anchor Capacity - (Committed and Pending Anchor Capacity)</inlineHelpText>
    <label>Client Acq Available Anchor Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>