force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Available_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Available_Small_CS_Capacity__c</fullName>
    <formula>Client_Acq_Reserved_Small_CS_Capacity__c - (Client_Acq_Committed_Small_CS_Capacity__c + Client_Acq_Pending_Small_CS_Capacity__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Client Acquired Small CS Capacity not yet committed or pending; Result of Reserved Anchor Capacity - (Committed and Pending Anchor Capacity)</inlineHelpText>
    <label>Client Acq Available Small CS Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>