force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Committed_LMI_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Committed_LMI_Capacity__c</fullName>
    <description>Set by SystemCapacityRollupCalculator</description>
    <inlineHelpText>Sum of all Small CS Subscriptions where the Opportunity&apos;s Stage is Complete, Partner is a Client, and Customer Sub-Group is LMI</inlineHelpText>
    <label>Client Acq Committed LMI Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>