force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Committed_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Committed_Small_CS_Capacity__c</fullName>
    <description>Set by SystemCapacityRollupCalculator</description>
    <inlineHelpText>Sum of all Small CS Subscriptions where the Opportunity&apos;s Partner is not a Client Account</inlineHelpText>
    <label>Client Acq Committed Small CS Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>