force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Pending_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Pending_Small_CS_Capacity__c</fullName>
    <inlineHelpText>Sum of New, Pending, or QC in Process Small CS subscriptions, if the Opportunity&apos;s Partner is a Client Account</inlineHelpText>
    <label>Client Acq Pending Small CS Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>