force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Reserved_LMI_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Reserved_LMI_Capacity__c</fullName>
    <inlineHelpText>Reserved capacity for Client Acquired LMI customers, manually input via a Shared Solar System Order</inlineHelpText>
    <label>Client Acq Reserved LMI Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>