force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acq_Reserved_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Acq_Reserved_Small_CS_Capacity__c</fullName>
    <inlineHelpText>Reserved Client Acquired Small CS Capacity, manually input via a Shared Solar System Order</inlineHelpText>
    <label>Client Acq Reserved Small CS Capacity</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>