force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Acquisition_Contract__c.field-meta.xml
<CustomField>
    <fullName>Client_Acquisition_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The field points to the same contract even if there is only one.</description>
    <inlineHelpText>Set automatically when a Client Contract is effective, and used for Client Invoicing. It could be the same as the Client Management Contract.</inlineHelpText>
    <label>Client Acquisition Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Client Acquisition Contract</relationshipLabel>
    <relationshipName>Shared_Solar_Systems</relationshipName>
    <type>Lookup</type>
</CustomField>