force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Brand_Key__c.field-meta.xml
<CustomField>
    <fullName>Client_Brand_Key__c</fullName>
    <inlineHelpText>&quot;Client Brand Key&quot; set on the client account linked to the entity. Use this field to override that value for a specific SSS</inlineHelpText>
    <label>Client Brand Key Override</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetName>Client_Logo_Filenames</valueSetName>
        
        </valueSet>
</CustomField>