force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Mngd_Contracted_LMI_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Mngd_Contracted_LMI_Capacity__c</fullName>
    <inlineHelpText>Client Managed Contracted LMI Capacity, set when the system is created</inlineHelpText>
    <label>Client Mngd Contracted LMI Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>