force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Mngd_Forecasted_Small_CS_Capacity__c.field-meta.xml
<CustomField>
    <fullName>Client_Mngd_Forecasted_Small_CS_Capacity__c</fullName>
    <inlineHelpText>Client Manage Forecasted Small CS Capacity, set or changed through a Shared Solar System Order</inlineHelpText>
    <label>Client Mngd Forecasted Small CS Capacity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>