force-app/main/default/objects/Shared_Solar_System__c/fields/Client_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Client_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Client Opportunity that is responsible for this Shared Solar System. Note that this is applicable to the sales process, not post-sale.</inlineHelpText>
    <label>Client Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Shared Solar Systems</relationshipLabel>
    <relationshipName>Shared_Solar_Systems1</relationshipName>
    <type>Lookup</type>
</CustomField>